@@ -6,5 +6,16 @@ lib/POE/Component/IRC/Plugin/MegaHAL.pm
 script/irchal-seed
 t/01_compile.t
 t/02_load.t
-t/99_pod.t
 t/megahal.trn
+xt/99_pod.t
+inc/Module/Install.pm
+inc/Module/Install/AuthorTests.pm
+inc/Module/Install/Base.pm
+inc/Module/Install/Can.pm
+inc/Module/Install/Fetch.pm
+inc/Module/Install/GithubMeta.pm
+inc/Module/Install/Makefile.pm
+inc/Module/Install/Metadata.pm
+inc/Module/Install/Scripts.pm
+inc/Module/Install/Win32.pm
+inc/Module/Install/WriteAll.pm
