@@ -1,6 +1,7 @@
 0.31
     - irchal-seed: Amend bot-nick-catching regex a bit
     - irchal-seed: Document the --help and --version options
+    - Converted distribution over to Module::Install
 
 0.30  Tue Jan 19 23:49:23 GMT 2010
     - Fix typo in subroutine name
